--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>EcoClicker v0.5.1</title><style type="text/css">/* http://meyerweb.com/eric/tools/css/reset/
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>环保点击 v0.5.1</title><style type="text/css">/* http://meyerweb.com/eric/tools/css/reset/
        v2.0 | 20110126
        License: none (public domain)
     */
