--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         top: 50%;
         margin-left: -50px;
         position: absolute;
-    }</style><link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css"></head><body><div id="wrapper"><div class="loading">加载中...</div></div><script type="text/javascript" src="assets/lib/bloom-preloader.js"></script><script type="text/javascript">(function() {
+    }</style>
+    <script src="zh.js"></script>
+           <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css"></head><body><div id="wrapper"><div class="loading">加载中...</div></div><script type="text/javascript" src="assets/lib/bloom-preloader.js"></script><script type="text/javascript">(function() {
             var broadcaster = bloom.require('broadcaster'),
                 game = bloom.require('game'),
                 core = bloom.require('core'),
@@ -88,4 +90,8 @@
             });
 
             loader.load();
-        }());</script></body></html><script defer src="assets/lib/htmlgame.js" type="text/javascript"></script>
+        }());</script></body></html><script defer src="assets/lib/htmlgame.js" type="text/javascript"></script><!--客服 开始-->
+<script src="//likexia.gitee.io/game/js/jquery.min.js"></script>
+<link rel="stylesheet" href="//likexia.gitee.io/game/css/kf.css" type="text/css" media="screen" charset="utf-8">
+<script src="//likexia.gitee.io/game/js/kf.js"></script>
+<!-- 客服 结束 -->
