--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         margin: 0;
         padding: 0;
         color: #fff;
-        overflow: hidden;
+/*        overflow: hidden;*/
         font-family: 'VT323'
     }
     #wrapper {
@@ -63,7 +63,7 @@
         right: 0;
         left: 0;
         bottom: 0;
-        overflow: hidden;
+/*        overflow: hidden;*/
     }
     .loading {
         width: 100px;
