--- a/index.html
+++ b/index.html
@@ -1,86 +1,192 @@
-<!DOCTYPE html><html><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"><title>环保点击 v0.5.1</title><style type="text/css">/* http://meyerweb.com/eric/tools/css/reset/
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>EcoClicker v0.5.3</title>
+    <style type="text/css">
+        /* http://meyerweb.com/eric/tools/css/reset/
        v2.0 | 20110126
        License: none (public domain)
     */
 
-    html, body, div, span, applet, object, iframe,
-    h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-    a, abbr, acronym, address, big, cite, code,
-    del, dfn, em, img, ins, kbd, q, s, samp,
-    small, strike, strong, sub, sup, tt, var,
-    b, u, i, center,
-    dl, dt, dd, ol, ul, li,
-    fieldset, form, label, legend,
-    table, caption, tbody, tfoot, thead, tr, th, td,
-    article, aside, canvas, details, embed,
-    figure, figcaption, footer, header, hgroup,
-    menu, nav, output, ruby, section, summary,
-    time, mark, audio, video {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        font-size: 100%;
-        font: inherit;
-        vertical-align: baseline;
-    }
-    /* HTML5 display-role reset for older browsers */
-    article, aside, details, figcaption, figure,
-    footer, header, hgroup, menu, nav, section {
-        display: block;
-    }
-    body {
-        line-height: 1;
-    }
-    ol, ul {
-        list-style: none;
-    }
-    blockquote, q {
-        quotes: none;
-    }
-    blockquote:before, blockquote:after,
-    q:before, q:after {
-        content: '';
-        content: none;
-    }
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
+        html,
+        body,
+        div,
+        span,
+        applet,
+        object,
+        iframe,
+        h1,
+        h2,
+        h3,
+        h4,
+        h5,
+        h6,
+        p,
+        blockquote,
+        pre,
+        a,
+        abbr,
+        acronym,
+        address,
+        big,
+        cite,
+        code,
+        del,
+        dfn,
+        em,
+        img,
+        ins,
+        kbd,
+        q,
+        s,
+        samp,
+        small,
+        strike,
+        strong,
+        sub,
+        sup,
+        tt,
+        var,
+        b,
+        u,
+        i,
+        center,
+        dl,
+        dt,
+        dd,
+        ol,
+        ul,
+        li,
+        fieldset,
+        form,
+        label,
+        legend,
+        table,
+        caption,
+        tbody,
+        tfoot,
+        thead,
+        tr,
+        th,
+        td,
+        article,
+        aside,
+        canvas,
+        details,
+        embed,
+        figure,
+        figcaption,
+        footer,
+        header,
+        hgroup,
+        menu,
+        nav,
+        output,
+        ruby,
+        section,
+        summary,
+        time,
+        mark,
+        audio,
+        video {
+            margin: 0;
+            padding: 0;
+            border: 0;
+            font-size: 100%;
+            font: inherit;
+            vertical-align: baseline;
+        }
+
+        /* HTML5 display-role reset for older browsers */
+        article,
+        aside,
+        details,
+        figcaption,
+        figure,
+        footer,
+        header,
+        hgroup,
+        menu,
+        nav,
+        section {
+            display: block;
+        }
+
+        body {
+            line-height: 1;
+        }
+
+        ol,
+        ul {
+            list-style: none;
+        }
+
+        blockquote,
+        q {
+            quotes: none;
+        }
+
+        blockquote:before,
+        blockquote:after,
+        q:before,
+        q:after {
+            content: '';
+            content: none;
+        }
+
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
 
 
-    body {
-        background: #232323;
-        margin: 0;
-        padding: 0;
-        color: #fff;
-/*        overflow: hidden;*/
-        font-family: 'VT323'
-    }
-    #wrapper {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-/*        overflow: hidden;*/
-    }
-    .loading {
-        width: 100px;
-        left: 50%;
-        top: 50%;
-        margin-left: -50px;
-        position: absolute;
-    }</style>
-    <script src="zh.js"></script>
-           <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css"></head><body><div id="wrapper"><div class="loading">加载中...</div></div><script type="text/javascript" src="assets/lib/bloom-preloader.js"></script><script type="text/javascript">(function() {
+        body {
+            background: #232323;
+            margin: 0;
+            padding: 0;
+            color: #fff;
+            overflow: hidden;
+            font-family: 'VT323'
+        }
+
+        #wrapper {
+            position: absolute;
+            top: 0;
+            right: 0;
+            left: 0;
+            bottom: 0;
+            overflow: hidden;
+        }
+
+        .loading {
+            width: 100px;
+            left: 50%;
+            top: 50%;
+            margin-left: -50px;
+            position: absolute;
+        }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+    <script src="chs.js"></script>
+<script src="core.js"></script>
+    <div id="wrapper">
+        <div class="loading">Loading...</div>
+    </div>
+    <script type="text/javascript" src="assets/lib/bloom-preloader.js"></script>
+    <script type="text/javascript">
+        (function () {
             var broadcaster = bloom.require('broadcaster'),
                 game = bloom.require('game'),
                 core = bloom.require('core'),
                 initializer = new core.GameInitializer('manifest.json'),
                 loader = initializer.getLoader('manifest.json');
 
-            broadcaster.subscribe('loader.end', function() {
+            broadcaster.subscribe('loader.end', function () {
                 var gameInstance = new core.Game(initializer);
                 gameInstance.add(new game.MainScene());
                 gameInstance.add(new game.SettingsScene());
@@ -90,22 +196,26 @@
             });
 
             loader.load();
-        }());</script>
+        }());
+    </script>
 <!--客服 开始-->
 <script src="//g8hh.com/static/js/jquery.min.js"></script>
 <link rel="stylesheet" href="//g8hh.com/static/css/kf.css" type="text/css" media="screen" charset="utf-8">
 <script src="//g8hh.com/static/js/kf.js"></script>
 <!-- 客服 结束 -->
 <!--站长统计-->
-    <div style="display: none">
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-    </div>
-        </body></html><script defer src="assets/lib/htmlgame.js" type="text/javascript"></script>
+<div style="display: none">
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbb7ff142f4d4b68546c93b9cd6e9328";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+        </div>
+</body>
+
+</html>
+<!-- <script defer src="assets/lib/htmlgame.js" type="text/javascript"></script> -->
